--- a/grouping.tex
+++ b/grouping.tex
@@ -247,7 +247,7 @@ Une autre possibilité est de considérer que les composantes ont une importance
     
     \begin{figure}[htp]
 \centering
-\includegraphics[width=.45\textwidth]{img/gfig0.eps}
+\includegraphics[width=.5\textwidth]{img/artsig.eps}
 \vspace{-.7cm}\caption{Exemples de signal généré}
 \label{}
 \end{figure}
