--- a/grouping.tex
+++ b/grouping.tex
@@ -13,7 +13,7 @@
 
 
 %Gummi|065|=)
-\title{Separation de sources automatique}
+\title{Groupement automatique pour l'analyse du spectre singulier}
 
 \auteur{\coord{Thomas}{Moreau}{1},
         \coord{Laurent}{Oudre}{2},
